@@ -17,7 +17,7 @@ import hudson.security.GlobalMatrixAuthorizationStrategy;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.URL;
-import java.util.Collections;
+import java.util.List;
 import jenkins.model.Jenkins;
 import jenkins.security.apitoken.ApiTokenTestHelper;
 import org.junit.Rule;
@@ -80,7 +80,7 @@ public class HudsonHomeDiskUsageMonitorTest {
 
         WebRequest request = new WebRequest(new URL(wc.getContextPath() + "administrativeMonitor/hudsonHomeIsFull/act"), HttpMethod.POST);
         NameValuePair param = new NameValuePair("no", "true");
-        request.setRequestParameters(Collections.singletonList(param));
+        request.setRequestParameters(List.of(param));
 
         HudsonHomeDiskUsageMonitor mon = HudsonHomeDiskUsageMonitor.get();
 
@@ -96,7 +96,7 @@ public class HudsonHomeDiskUsageMonitorTest {
 
         wc.withBasicApiToken(administrator);
         request = new WebRequest(new URL(wc.getContextPath() + "administrativeMonitor/hudsonHomeIsFull/act"), HttpMethod.POST);
-        request.setRequestParameters(Collections.singletonList(param));
+        request.setRequestParameters(List.of(param));
         p = wc.getPage(request);
         assertEquals(HttpURLConnection.HTTP_OK, p.getWebResponse().getStatusCode());
         assertFalse(mon.isEnabled());
